customized colors, added hero img

--- a/demo-coworking-hl.html
+++ b/demo-coworking-hl.html
@@ -11,11 +11,9 @@
 	<link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
 	<link rel="stylesheet" href="style.css" type="text/css" />
 	<link rel="stylesheet" href="css/dark.css" type="text/css" />
-
 	<link rel="stylesheet" href="css/font-icons.css" type="text/css" />
 	<link rel="stylesheet" href="css/animate.css" type="text/css" />
 	<link rel="stylesheet" href="css/magnific-popup.css" type="text/css" />
-
 	<link rel="stylesheet" href="css/custom.css" type="text/css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -34,7 +32,7 @@
 <body class="stretched">
 
 	<!-- Document Wrapper
-	============================================= -->
+	============================================= -->?
 	<div id="wrapper" class="clearfix">
 
 		<!-- Header
@@ -47,12 +45,13 @@
 						<!-- Logo
 						============================================= -->
 						<div id="logo">
-							<a href="index.html" class="standard-logo" data-sticky-logo="demos/coworking/images/logo-sticky.png"><img src="demos/coworking/images/logo.png" alt="Canvas Logo"></a>
-							<a href="index.html" class="retina-logo" data-sticky-logo="demos/coworking/images/logo-sticky@2x.png"><img src="demos/coworking/images/logo@2x.png" alt="Canvas Logo"></a>
+							<a href="index.html" class="standard-logo" data-sticky-logo="demos/coworking/images/06_HOOTLABS_LOGO_V6_LOW-RES_72 PPI-01.jpg"><img src="demos/coworking/images/06_HOOTLABS_LOGO_V6_LOW-RES_72 PPI-01.jpg" alt="HootLabs Logo"></a>
+                            <a href="index.html" class="retina-logo" data-sticky-logo="demos/coworking/images/06_HOOTLABS_LOGO_V6_LOW-RES_72"><img src="demos/coworking/images/06_HOOTLABS_LOGO_V6_HI-RES_300 PPI-01.jpg" alt="HootLabs Logo"></a>
+							<!-- <a href="index.html" class="retina-logo" data-sticky-logo="demos/coworking/images/logo-sticky@2x.png"><img src="demos/coworking/images/logo@2x.png" alt="Canvas Logo"></a> -->
 						</div><!-- #logo end -->
 
 						<div class="header-misc">
-							<a class="top-phone" href="tel:+618-234-532-45"><i class="icon-call"></i> <span class="d-none d-md-inline-block">+(61)8-234-532-45</span></a>
+							<a class="top-phone" href="tel:737-990-1294"><i class="icon-call"></i> <span class="d-none d-md-inline-block">737-990-1294</span></a>
 						</div>
 
 						<div id="primary-menu-trigger">
@@ -88,29 +87,39 @@
 				<div class="section bg-transparent py-2">
 					<div class="container">
 						<div class="row">
-							<div class="col-md-7">
-								<h2 class="display-4 fw-semibold ls--2">We power up your online <span class="text-rotater" data-separator="|" data-rotate="fadeIn" data-speed="2000">
-									<span class="t-rotate">revenue|analytics|presence</span>
-								    </span> one Shopify store at a time.
+							<div class="col-md-12 align-items-center">
+								<h2 class="display-4 fw-semibold ls--2">Power up your Shopify store's
+                                    <span class="text-rotater" data-separator="|"           data-rotate="fadeIn" data-speed="2000">
+									    <span class="t-rotate">
+                                            revenue|analytics|presence
+                                        </span>
+								    </span>
                                 </h2>
 							</div>
-							<div class="col-md-5">
+							<!-- <div class="col-md-5">
 								<p class="lead text-muted">
-									Collaboratively coordinate adaptive synergy with compelling "outside the box" thinking. Continually recaptiualize user friendly sources whereas leveraged.
+                                    <ul>
+                                        <li>getting started and launching your store</li>
+                                        <li>customizing your store</li>
+                                        <li>operational process design</li>
+                                        <li>product management</li>
+                                        <li>integrating external shipping</li>
+                                        <li>automating back-end processes</li>
+                                    </ul>
 								</p>
-							</div>
+							</div> -->
 						</div>
 					</div>
 				</div>
 
-				<div class="overflow-hidden parallax d-flex align-items-center" data-bottom-top="background-position:0px 200px;" data-top-bottom="background-position:0px -400px;" style="background-image: url('demos/coworking/images/hero.jpg'); background-size: cover; height: 600px; width: 100%;">
-					<div class="container">
+				<div class="overflow-hidden parallax d-flex align-items-center" data-bottom-top="background-position:0px 200px;" data-top-bottom="background-position:0px -400px;" style="background-image: url('demos/coworking/images/istockphoto-1222457431-1024x1024.jpg'); background-size: cover; height: 400px; width: 100%;">
+					<!-- <div class="container">
 						<div class="row">
 							<div class="col-lg-6">
-								<h2 class="text-white">The Center is a network of 9 workspaces, from 200 to 3,700 sqft, Build and Designed to support Personal and Businesses in the Creative World.</h2>
+								<h2 class="text-dark">The Center is a network of 9 workspaces, from 200 to 3,700 sqft, Build and Designed to support Personal and Businesses in the Creative World.</h2>
 							</div>
 						</div>
-					</div>
+					</div> -->
 				</div>
 
 				<div class="bg-theme-light">
@@ -122,8 +131,8 @@
 										<i class="icon-line-circle-check"></i>
 									</div>
 									<div class="fbox-content">
-										<h3 class="text-white">Easily Manage Your Works</h3>
-										<p class="text-white mb-0">24x7 available, Anytime & anywhere, we're always available for You.</p>
+										<h3 class="text-white">Start your store. </h3>
+										<!-- <p class="text-white mb-0">24x7 available, Anytime & anywhere, we're always available for You.</p> -->
 									</div>
 								</div>
 							</div>
@@ -134,8 +143,8 @@
 										<i class="icon-line-circle-check"></i>
 									</div>
 									<div class="fbox-content">
-										<h3 class="text-white">24x7 Access.</h3>
-										<p class="text-white mb-0">Get Started with our Regular, Weekly, Monthly Plan.</p>
+										<h3 class="text-white">Grow your store.</h3>
+										<!-- <p class="text-white mb-0">Get Started with our Regular, Weekly, Monthly Plan.</p> -->
 									</div>
 								</div>
 							</div>
@@ -146,8 +155,8 @@
 										<i class="icon-line-circle-check"></i>
 									</div>
 									<div class="fbox-content">
-										<h3 class="text-white">Secured &amp; Friendly.</h3>
-										<p class="text-white mb-0">Intrinsicly evisculate quality vectors befor high-impact schemas.</p>
+										<h3 class="text-white">Manage your store.</h3>
+										<!-- <p class="text-white mb-0">Intrinsicly evisculate quality vectors befor high-impact schemas.</p> -->
 									</div>
 								</div>
 							</div>
@@ -165,18 +174,18 @@
 								</div>
 								<div class="row">
 									<div class="col-6 col-sm-6 mb-4">
-										<div class="counter color fw-semibold"><span data-from="1" data-to="3" data-refresh-interval="2" data-speed="600"></span>+</div>
-										<h5 class="mt-0 fw-medium">Branches</h5>
+										<div class="counter color fw-semibold"><span data-from="1" data-to="15" data-refresh-interval="2" data-speed="600"></span>+</div>
+										<h5 class="mt-0 fw-medium">Years Software Development Experience</h5>
 									</div>
 
 									<div class="col-6 col-sm-6 mb-4">
-										<div class="counter color fw-semibold"><span data-from="1" data-to="37" data-refresh-interval="11" data-speed="900"></span>+</div>
-										<h5 class="mt-0 fw-medium">Single Studios</h5>
+										<div class="counter color fw-semibold"><span data-from="1" data-to="10" data-refresh-interval="11" data-speed="900"></span>+</div>
+										<h5 class="mt-0 fw-medium">Years Business Leadership Experience</h5>
 									</div>
 
 									<div class="col-6 col-sm-6 mb-4">
-										<div class="counter color fw-semibold"><span data-from="1" data-to="21" data-refresh-interval="3" data-speed="1000"></span>+</div>
-										<h5 class="mt-0 fw-medium">Events per Month</h5>
+										<div class="counter color fw-semibold"><span data-from="1" data-to="100" data-refresh-interval="3" data-speed="1000"></span>+</div>
+										<h5 class="mt-0 fw-medium">Small Business Owners Helped</h5>
 									</div>
 
 									<div class="col-6 col-sm-6 mb-4">
@@ -984,8 +993,8 @@
 
 					<div class="row">
 						<div class="col-12">
-							<p class="mb-2 text-white-50">Copyrights &copy; 2020 All Rights Reserved by Canvas Inc.</p>
-							<div class="copyright-links text-white-50"><a href="#" class="text-white-50">Terms of Use</a> / <a href="#" class="text-white-50">Privacy Policy</a></div>
+							<p class="mb-2 text-white-50">Copyrights &copy; 2023 All Rights Reserved by HootLabs LLC</p>
+							<!-- <div class="copyright-links text-white-50"><a href="#" class="text-white-50">Terms of Use</a> / <a href="#" class="text-white-50">Privacy Policy</a></div> -->
 						</div>
 					</div>
 
