With additional images, but broken cards

--- a/demo-coworking-hl.html
+++ b/demo-coworking-hl.html
@@ -25,7 +25,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Coworking | Canvas</title>
+	<title>HootLabs</title>
 
 </head>
 
@@ -131,7 +131,7 @@
 										<i class="icon-line-circle-check"></i>
 									</div>
 									<div class="fbox-content">
-										<h3 class="text-white">Start your store. </h3>
+										<h3 class="text-white">Launch your store.</h3>
 										<!-- <p class="text-white mb-0">24x7 available, Anytime & anywhere, we're always available for You.</p> -->
 									</div>
 								</div>
@@ -143,7 +143,7 @@
 										<i class="icon-line-circle-check"></i>
 									</div>
 									<div class="fbox-content">
-										<h3 class="text-white">Grow your store.</h3>
+										<h3 class="text-white">Grow store revenue.</h3>
 										<!-- <p class="text-white mb-0">Get Started with our Regular, Weekly, Monthly Plan.</p> -->
 									</div>
 								</div>
@@ -155,7 +155,7 @@
 										<i class="icon-line-circle-check"></i>
 									</div>
 									<div class="fbox-content">
-										<h3 class="text-white">Manage your store.</h3>
+										<h3 class="text-white">Maximize operations workflow.</h3>
 										<!-- <p class="text-white mb-0">Intrinsicly evisculate quality vectors befor high-impact schemas.</p> -->
 									</div>
 								</div>
@@ -169,8 +169,8 @@
 						<div class="row align-items-md-center mb-5">
 							<div class="col-md-6 pe-5">
 								<div class="heading-block mb-4 border-bottom-0">
-									<div class="before-heading">Know More</div>
-									<h2 class="nott fw-semibold">Work Together, Build Together.</h2>
+									<div class="before-heading">Grow</div>
+									<h2 class="nott fw-semibold">Helping your business thrive.</h2>
 								</div>
 								<div class="row">
 									<div class="col-6 col-sm-6 mb-4">
@@ -188,34 +188,38 @@
 										<h5 class="mt-0 fw-medium">Small Business Owners Helped</h5>
 									</div>
 
-									<div class="col-6 col-sm-6 mb-4">
+									<!-- <div class="col-6 col-sm-6 mb-4">
 										<div class="counter color fw-semibold"><span data-from="100" data-to="4500" data-refresh-interval="100" data-speed="1500"></span>+</div>
 										<h5 class="mt-0 fw-medium">Active Members</h5>
-									</div>
+									</div> -->
 								</div>
-								<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda praesentium eius, similique reprehenderit ab voluptatibus eaque.</p>
+								<p class="text-muted">We have experience delivering results for small businesses, large franchise systems, and nonprofits. Each business is unique, and we've helped each reach their own goals.</p>
 							</div>
+                            <div>
+
+                            </div>
+                            <div class="col-md-3 col-sm-6">
+                                <img src="demos/coworking/images/hl/iStock-1201699822_woman_packing_boxes_med.jpg" alt="Featured image 2" class="card-img-top">
+                                <div class="card-body">
+                                    <h5 class="card-title fw-semibold color">Grow your sales</h5>
+                                    <p class="card-text">Focus on what</p>
+                                </div>
+                            </div>
 							<div class="col-md-3 col-sm-6">
 								<div class="card shadow-sm border-light">
-									<img src="demos/coworking/images/features/3.jpg" alt="Featured image 1" class="card-img-top">
+									<img src="demos/coworking/images/hl/kelly-sikkema-hS_eGxLjozs-unsplash.jpg" alt="Man with grinning toddler on his shoulders." class="card-img-top">
 									<div class="card-body">
-										<h5 class="card-title fw-semibold color">Meeting Rooms</h5>
-										<p class="card-text">Some quick example text to build on the card title.</p>
-									</div>
-								</div>
-								<div class="card shadow-sm border-light mt-4">
-									<img src="demos/coworking/images/features/2.jpg" alt="Featured image 2" class="card-img-top">
-									<div class="card-body">
-										<h5 class="card-title fw-semibold color">Private Rooms</h5>
-										<p class="card-text">Some quick example text. similique reprehenderit ab voluptatibus eaque.</p>
+										<h5 class="card-title fw-semibold color">Make time for the VIPs</h5>
+										<p class="card-text">Gain time with family and friends.</p>
 									</div>
 								</div>
 							</div>
 							<div class="col-md-3 col-sm-6 ps-sm-3 mt-3 mt-sm-0">
 								<div class="card shadow-sm border-light">
-									<img src="demos/coworking/images/features/1.jpg" alt="Featured image 3" class="card-img-top">
+									<img src="demos/coworking/images/hl/feather falling into mans hands.jpg" alt="Feather falling into an outstretched hand" class="card-img-top">
 									<div class="card-body">
-										<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        <h5 class="card-title fw-semibold color">Quiet the noise</h5>
+										<p class="card-text">Find space to focus on what you do best.</p>
 									</div>
 								</div>
 							</div>
