With cusotmized side panels after the fold

--- a/demo-coworking-hl.html
+++ b/demo-coworking-hl.html
@@ -170,7 +170,7 @@
 							<div class="col-md-6 pe-5">
 								<div class="heading-block mb-4 border-bottom-0">
 									<div class="before-heading">Grow</div>
-									<h2 class="nott fw-semibold">Helping your business thrive.</h2>
+									<h2 class="nott fw-semibold">We help you thrive.</h2>
 								</div>
 								<div class="row">
 									<div class="col-6 col-sm-6 mb-4">
@@ -188,26 +188,23 @@
 										<h5 class="mt-0 fw-medium">Small Business Owners Helped</h5>
 									</div>
 
-									<!-- <div class="col-6 col-sm-6 mb-4">
-										<div class="counter color fw-semibold"><span data-from="100" data-to="4500" data-refresh-interval="100" data-speed="1500"></span>+</div>
-										<h5 class="mt-0 fw-medium">Active Members</h5>
-									</div> -->
+									<div class="col-6 col-sm-6 mb-4">
+										<div class="counter color fw-semibold"><span data-from="1" data-to="100" data-refresh-interval="3" data-speed="1000"></span>+</div>
+										<h5 class="mt-0 fw-medium">Projects Delivered</h5>
+									</div>
 								</div>
-								<p class="text-muted">We have experience delivering results for small businesses, large franchise systems, and nonprofits. Each business is unique, and we've helped each reach their own goals.</p>
-							</div>
-                            <div>
-
+                                <p class="text-muted">We have experience delivering results for small businesses, large franchise systems, and nonprofits. Each business is unique, and we've helped each reach their own goals.</p>
                             </div>
                             <div class="col-md-3 col-sm-6">
-                                <img src="demos/coworking/images/hl/iStock-1201699822_woman_packing_boxes_med.jpg" alt="Featured image 2" class="card-img-top">
-                                <div class="card-body">
-                                    <h5 class="card-title fw-semibold color">Grow your sales</h5>
-                                    <p class="card-text">Focus on what</p>
-                                </div>
-                            </div>
-							<div class="col-md-3 col-sm-6">
 								<div class="card shadow-sm border-light">
-									<img src="demos/coworking/images/hl/kelly-sikkema-hS_eGxLjozs-unsplash.jpg" alt="Man with grinning toddler on his shoulders." class="card-img-top">
+									<img src="demos/coworking/images/hl/iStock-1201699822_woman_packing_boxes_sm.jpg" alt="Woman packing boxes for her small growing eCommerce business" class="card-img-top">
+									<div class="card-body">
+										<h5 class="card-title fw-semibold color">Grow your sales</h5>
+										<p class="card-text">Whether getting started or getting stronger, we can help you grow your topline.</p>
+									</div>
+								</div>
+								<div class="card shadow-sm border-light mt-4">
+									<img src="demos/coworking/images/hl/kelly-sikkema-hS_eGxLjozs-unsplash.jpg" alt="Man with grinning toddler on his shoulders" class="card-img-top">
 									<div class="card-body">
 										<h5 class="card-title fw-semibold color">Make time for the VIPs</h5>
 										<p class="card-text">Gain time with family and friends.</p>
@@ -216,7 +213,7 @@
 							</div>
 							<div class="col-md-3 col-sm-6 ps-sm-3 mt-3 mt-sm-0">
 								<div class="card shadow-sm border-light">
-									<img src="demos/coworking/images/hl/feather falling into mans hands.jpg" alt="Feather falling into an outstretched hand" class="card-img-top">
+									<img src="demos/coworking/images/hl/feather falling into mans hands.jpg" alt="Featured image 3" class="card-img-top">
 									<div class="card-body">
                                         <h5 class="card-title fw-semibold color">Quiet the noise</h5>
 										<p class="card-text">Find space to focus on what you do best.</p>
